# from-the-past-3

./: CMakeLists.txt  Fraction.cpp  Fraction.h  ShapeUML.uxf  fafafa.cpp  lab12-solution-uml.class.diagram.uxf  main.cpp  main2.cpp  mockup_exam.cpp  phoneUML.uxf  quiz1.py
OperatorOverloadingLab/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  Customer.cpp  Customer.h  TestBanking.cpp  TestCustomer.cpp
PHONE/: lab12-solution.cpp  main.cpp
Question2mockup/: CMakeLists.txt  Shapes.cpp  Shapes.h  main.cpp  question1.cpp  test.cpp
mockup2/: CMakeLists.txt  Interval.cpp
mockup2solution/: Interval.cpp  Interval.h  TestInt.cpp
mt2xd/: CMakeLists.txt
newnew/: CMakeLists.txt  CMatrix.cpp  CMatrix.h  TestMatrix.cpp  out.txt
prepmockup2/: CMakeLists.txt  Interval.cpp  Interval.h  TestInt.cpp
smith/: smith.cpp  smith.h  smithnums.cpp
workwork/: CMakeLists.txt  TestVehicle.cpp  Vehicle.cpp  Vehicle.h
workwork2/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  Customer.cpp  Customer.h  SavingAccount.cpp  SavingAccount.h  TestBanking.cpp
